--- a/index.html
+++ b/index.html
@@ -58,82 +58,81 @@
     <main class="main-index">
       <h1 class="visually-hidden">Город Седона</h1>
       <div class="hero">
-        <img class="hero-logo-text" src="" alt=" Логотип сайта" width="458" height="352">
+        <img class="hero-logo-text" src="" alt=" Логотипы сайта" width="458" height="352">
       </div>
 
-      <section class="hero">
-        <h2 class="hero-title">Седона-небольшой городок в Аризоне,
+      <section class="reason">
+        <h2 class="reason-title">Седона-небольшой городок в Аризоне,
           заслуживающий большего!</h2>
-        <p class="hero-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p class="reason-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
+
         <ul class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
+            <h2 class="advantages-title">Настоящий городок</h2>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </li>
-
-          <li class="advantages-item">
             <img class="advantages-photo" src="" alt="Красивая картинка здания с листвой" width="800" height="384">
-          </li>
-        </ul>
 
-        <ul class="advantages">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-          </li>
+            <ul class="advantages-card">
+              <li class="advantages-item">
+                <h2 class="advantages-title">Небольшая площадь</h2>
+                <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              </li>
 
-          <li class="advantages-item">
-            <h3 class="advantages-title">Красивая
-              дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
+              <li class="advantages-item">
+                <h2 class="advantages-title">Красивая дорога</h2>
+                <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
 
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало
-              туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+              <li class="advantages-item">
+                <h2 class="advantages-title">Мало туристов</h2>
+                <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </ul>
           </li>
 
-        </ul>
-
-        <ul class="advantages-list">
-          <li class="advantages-item">
+          <li>
             <img class="advantages-photo" src="" alt="Красивая картинка гор и дальних деревьев" width="800" height="384">
-          </li>
-
-          <li class="advantages-item">
-            <h3 class="advantages-title">Там есть
-              мост дьявола</h3>
+            <h2 class="advantages-title">Там есть мост дьявола</h2>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+
+            <ul class="advantages-card">
+              <li class="advantages-item">
+
+              </li>
+
+              <li class="advantages-item">
+
+              </li>
+
+              <li class="advantages-item">
+
+              </li>
+            </ul>
           </li>
         </ul>
-      </section>
 
       <section class="recommendations">
         <ul class="recommendations-list">
           <li class="recommendations-item">
             <img class="recommendations-logo" src="" alt="Домик">
             <h3 class="recommendations-title">Жильё</h3>
-            <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле,
-              всё как в кино!</p>
+            <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
 
           <li class="recommendations-item">
             <img class="recommendations-logo" src="" alt="Бургер">
             <h3 class="recommendations-title">Еда</h3>
-            <p class="recommendations-description">Всегда заказывайте
-              топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
           <li class="recommendations-item">
             <img class="recommendations-logo" src="" alt="Подарок">
             <h3 class="recommendations-title">Сувениры</h3>
-            <p class="recommendations-description">Не только китайского,
-              но и настоящего местного производства!</p>
+            <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
