--- a/index.html
+++ b/index.html
@@ -76,64 +76,47 @@
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="advantages-photo" src="" alt="Красивая картинка здания с листвой" width="800" height="384">
 
-            <ul class="advantages-card">
-              <li class="advantages-item">
+            <ul class="advantages-extra-list">
+              <li class="advantages-extra-item">
                 <h2 class="advantages-title">Небольшая площадь</h2>
                 <p class="advantages-description">Все достопримечательности находятся очень близко</p>
               </li>
 
-              <li class="advantages-item">
+              <li class="advantages-extra-item">
                 <h2 class="advantages-title">Красивая дорога</h2>
                 <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
 
-              <li class="advantages-item">
+              <li class="advantages-extra-item">
                 <h2 class="advantages-title">Мало туристов</h2>
                 <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
             </ul>
           </li>
 
-          <li>
+          <li class="advantages-item">
             <img class="advantages-photo" src="" alt="Красивая картинка гор и дальних деревьев" width="800" height="384">
             <h2 class="advantages-title">Там есть мост дьявола</h2>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-
-            <ul class="advantages-card">
-
-              <li class="advantages-item">
-
-              </li>
-
-              <li class="advantages-item">
-
-              </li>
-
-              <li class="advantages-item">
-
-              </li>
-            </ul>
           </li>
         </ul>
 
-      <section class="recommendations">
-
         <ul class="recommendations-list">
           <li class="recommendations-item">
-            <ul class="recommendations-card">
-              <li class="recommendations-item">
+            <ul class="recommendations-extra-list">
+              <li class="recommendations-extra-item">
                 <img class="recommendations-logo" src="" alt="Домик">
                 <h3 class="recommendations-title">Жильё</h3>
                 <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
 
-              <li class="recommendations-item">
+              <li class="recommendations-extra-item">
                 <img class="recommendations-logo" src="" alt="Бургер">
                 <h3 class="recommendations-title">Еда</h3>
                 <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
 
-              <li class="recommendations-item">
+              <li class="recommendations-extra-item">
                 <img class="recommendations-logo" src="" alt="Подарок">
                 <h3 class="recommendations-title">Сувениры</h3>
                 <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
@@ -144,13 +127,10 @@
       </section>
 
       <section class="search-hostels">
-        <ul class="search-hostels-list">
-          <li class="search-hostels-item">
-            <h3 class="search-hostels-title">Заинтересовались?</h3>
-            <p class="search-hostels-discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
-          </li>
-        </ul>
+        <h3 class="search-hostels-title">Заинтересовались?</h3>
+        <p class="search-hostels-discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+
       </section>
 
       <section class="newsletter">
