--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
+        <a class="navigation-link navigation-logo" href="#">
+          <img src="#" alt="Логотип города Седона.">
+        </a>
         <ul class="navigation-list">
-
-          <li class="navigation-item">
-            <a class="navigation-link navigation-logo" href="#">
-              <img src="#" alt="Логотип Сидоны">
-            </a>
-          </li>
-
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
           </li>
@@ -55,49 +51,46 @@
 
     </header>
 
-    <main class="main-index">
-      <h1 class="visually-hidden">Город Седона</h1>
-      <div class="hero">
-        <img class="hero-logo-text" src="" alt=" Логотипы сайта" width="458" height="352">
+    <main class="main-index" data-test="main">
+      <h2 class="visually-hidden">Седона — городок в Аризоне</h2>
+      <div class="hero" data-test="hero">
+        <img class="hero-logo-text" src="" alt=" Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" width="458" height="352">
       </div>
 
-      <section class="reason">
-        <h2 class="reason-title">Седона-небольшой городок в Аризоне,
-          заслуживающий большего!</h2>
-        <p class="reason-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-      </section>
-
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
+        <p class="advantages-title">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</p>
+        <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
         <ul class="advantages-list">
           <li class="advantages-item">
-            <h2 class="advantages-title">Настоящий городок</h2>
+            <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-photo" src="" alt="Красивая картинка здания с листвой" width="800" height="384">
+            <img class="advantages-photo" src="" alt="Домики на фоне гор." width="800" height="384">
 
             <ul class="advantages-extra-list">
               <li class="advantages-extra-item">
-                <h2 class="advantages-title">Небольшая площадь</h2>
-                <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+                <h3 class="advantages-extra-title">Небольшая площадь</h3>
+                <p class="advantages-extra-description">Все достопримечательности находятся очень близко</p>
               </li>
 
               <li class="advantages-extra-item">
-                <h2 class="advantages-title">Красивая дорога</h2>
-                <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <h3 class="advantages-extra-title">Красивая дорога</h3>
+                <p class="advantages-extra-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
 
               <li class="advantages-extra-item">
-                <h2 class="advantages-title">Мало туристов</h2>
-                <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+                <h3 class="advantages-extra-title">Мало туристов</h3>
+                <p class="advantages-extra-description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
             </ul>
           </li>
 
           <li class="advantages-item">
-            <img class="advantages-photo" src="" alt="Красивая картинка гор и дальних деревьев" width="800" height="384">
-            <h2 class="advantages-title">Там есть мост дьявола</h2>
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="advantages-photo" src="" alt="Каньон, горы, снова горы." width="800" height="384">
           </li>
         </ul>
 
@@ -105,19 +98,19 @@
           <li class="recommendations-item">
             <ul class="recommendations-extra-list">
               <li class="recommendations-extra-item">
-                <img class="recommendations-logo" src="" alt="Домик">
+
                 <h3 class="recommendations-title">Жильё</h3>
                 <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
 
               <li class="recommendations-extra-item">
-                <img class="recommendations-logo" src="" alt="Бургер">
+
                 <h3 class="recommendations-title">Еда</h3>
                 <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
 
               <li class="recommendations-extra-item">
-                <img class="recommendations-logo" src="" alt="Подарок">
+
                 <h3 class="recommendations-title">Сувениры</h3>
                 <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
               </li>
@@ -126,26 +119,26 @@
         </ul>
       </section>
 
-      <section class="search-hostels">
+      <section class="search-hostels" data-test="search">
         <h3 class="search-hostels-title">Заинтересовались?</h3>
-        <p class="search-hostels-discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button-search-hostels button-all" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
-
+        <p class="search-hostels-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="search-hostels-link button" href="#">Поиск гостиницы в Седоне</a>
       </section>
 
-      <section class="newsletter">
+      <section class="newsletter" data-test="subscribe">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email">Email</label>
-            <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-            <button class="newsletter-button" type="submit"> Подписаться
+            <label for="newsletter-email">Ваш e-mail</label>
+            <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+            <br>
+            <br><button class="newsletter-button" type="submit"> Подписаться
             </button>
           </form>
         </section>
 
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer" data-test="footer">
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
@@ -176,7 +169,7 @@
       </section>
 
       <section class="footer-copyright">
-        <a class="copyright-logo" href="#"><img class="logo-html" src="" alt="Фотография htmlacademy"></a>
+        <a class="copyright-logo" href="#"><img class="logo-html" src="" alt="Логотип HTML Academy"></a>
       </section>
     </footer>
   </body>
