--- a/catalog.html
+++ b/catalog.html
@@ -48,15 +48,15 @@
     <main class="main-inner" data-test="catalog">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ul class="bread-cumbs-list">
-          <li class="bread-cumbs-item">
-            <a class="bread-cumbs-item" href="#">
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="#">
               <span class="visually-hidden">Главная</span>
             </a>
           </li>
 
           <li>
-            <a class="bread-cumbs-hostels" href="#">Гостиницы</a>
+            <a class="breadcrumbs-hostels" href="#">Гостиницы</a>
           </li>
         </ul>
       </header>
@@ -260,7 +260,7 @@
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="newsletter-email">Ваш e-mail</label>
-            <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
             <button class="newsletter-button" type="submit"> Подписаться
             </button>
           </form>
