--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
-                Избранное 12
+                Избранное
               </span>
             </a>
           </li>
