--- a/catalog.html
+++ b/catalog.html
@@ -5,10 +5,10 @@
     <title>Каталог</title>
   </head>
   <body>
-    <header class="page-header" data-test="header">
+    <header class="page-header">
       <nav class="navigation">
         <a class="navigation-link navigation-logo" href="index.html">
-          <img src="#" alt="Логотип города Седона.">
+          <img src="images/logo_sedona.svg" alt="Логотип города Седона." width="140" height="70">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -45,7 +45,7 @@
       </nav>
     </header>
 
-    <main class="main-inner" data-test="catalog">
+    <main class="main-inner">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </header>
-      <section class="filter-content" data-test=" filter">
+      <section class="filter-content">
         <h1 class="visually-hidden">Фильтры</h1>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter-group">
@@ -131,7 +131,7 @@
         </form>
       </section>
 
-      <section class="catalog" data-test="catalog">
+      <section class="catalog">
         <h2 class="sorting-search">Найдено гостиниц: 38</h2>
         <select class="sorting-control" aria-label="Сортировка">
           <option value="popular">Сначала популярное</option>
@@ -161,7 +161,7 @@
       <ul class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="Звёздное небо в расщелине гор.">
+            <img class="product-card-image" src="images/catalog/hotel-1.jpg" alt="Звёздное небо в расщелине гор." width="300" height="212">
           </a>
           <a class="product-card-link" href="product.html">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
@@ -180,7 +180,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="Радуга над горным хребтом.">
+            <img class="product-card-image" src="images/catalog/hotel-2.jpg" alt="Радуга над горным хребтом." width="300" height="212">
           </a>
           <a class="product-card-link" href="#">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
@@ -199,7 +199,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="" alt="Горы на фоне голубого неба.">
+            <img class="product-card-image" src="images/catalog/hotel-3.jpg" alt="Горы на фоне голубого неба." width="300" height="212">
           </a>
           <a class="product-card-link" href="#">
             <h3 class="product-card-title">Desert Quail Inn</h3>
@@ -217,7 +217,7 @@
 
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img class="product-card-image" src="" alt="Гора на фоне звёздного неба.">
+              <img class="product-card-image" src="images/catalog/hotel-4.jpg" alt="Гора на фоне звёздного неба." width="300" height="212">
             </a>
             <a class="product-card-link" href="product.html">
               <h3 class="product-card-title">GreenTree Inn</h3>
@@ -255,7 +255,7 @@
         </li>
       </ul>
 
-      <section class="newsletter" data-test="subscribe">
+      <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -267,7 +267,7 @@
         </section>
     </main>
 
-    <footer class="page-footer" data-test="footer">
+    <footer class="page-footer">
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
@@ -297,7 +297,7 @@
       </section>
 
       <section class="footer-copyright">
-        <a class="copyright-logo" href="#"><img class="logo-html" src="" alt="Логотип HTML Academy"></a>
+        <a class="copyright-logo" href="#"><img class="logo-html" src="images/footer-academy.svg" alt="Логотип HTML Academy" width="115" height="33" ></a>
       </section>
     </footer>
   </body>
