--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Седона</title>
   </head>
   <body>
-    <header class="page-header" data-test="header">
+    <header class="page-header">
       <nav class="navigation">
         <a class="navigation-link navigation-logo" href="index.html">
-          <img src="#" alt="Логотип города Седона.">
+          <img src="images/logo_sedona.svg" alt="Логотип города Седона." width="140" height="70">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -45,13 +45,13 @@
       </nav>
     </header>
 
-    <main class="main-index" data-test="main">
+    <main class="main-index">
       <h2 class="visually-hidden">Седона — городок в Аризоне</h2>
-      <div class="hero" data-test="hero">
-        <img class="hero-image" src="" alt=" Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" width="458" height="352">
+      <div class="hero">
+        <img class="hero-image" src="images/welcome.svg" alt=" Welcome to the gorgeous Sedona, because the Grand Canyon sucks!" width="458" height="352">
       </div>
 
-      <section class="advantages" data-test="advantages">
+      <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <p class="advantages-title">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</p>
@@ -60,7 +60,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="advantages-photo" src="" alt="Домики на фоне гор." width="800" height="384">
+            <img class="advantages-photo" src="images/advantures-1.jpg" alt="Домики на фоне гор." width="800" height="384">
 
             <ul class="advantages-extra-list">
               <li class="advantages-extra-item">
@@ -83,7 +83,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="advantages-photo" src="" alt="Каньон, горы, снова горы." width="800" height="384">
+            <img class="advantages-photo" src="images/advantures-2.jpg" alt="Каньон, горы, снова горы." width="800" height="384">
 
             <ul class="recommendations-list">
               <li class="recommendations-item">
@@ -104,13 +104,13 @@
           </li>
         </ul>
 
-      <section class="search-hostels" data-test="search">
+      <section class="search-hostels">
         <h2 class="search-hostels-title">Заинтересовались?</h2>
         <p class="search-hostels-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="search-hostels-link button" href="#">Поиск гостиницы в Седоне</a>
       </section>
 
-      <section class="newsletter" data-test="subscribe">
+      <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -121,7 +121,7 @@
           </form>
         </section>
     </main>
-    <footer class="page-footer" data-test="footer">
+    <footer class="page-footer">
       <section class="social">
         <ul class="social-list">
           <li class="social-item">
@@ -151,7 +151,7 @@
       </section>
 
       <section class="footer-copyright">
-        <a class="copyright-logo" href="#"><img class="logo-html" src="" alt="Логотип HTML Academy"></a>
+        <a class="copyright-logo" href="#"><img class="logo-html" src="images/footer-academy.svg" alt="Логотип HTML Academy" width="115" height="33"></a>
       </section>
     </footer>
   </body>
