--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-<<<<<<< Updated upstream
-        <p class="advantages-title-first">Седона — небольшой городок в Аризоне,
-          заслуживающий большего!</p>
-        <p class="advantages-description-first">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <div class="intro">
+          <p class="advantages-intro-title">Седона — небольшой городок в Аризоне,
+            заслуживающий большего!</p>
+          <p class="advantages-intro-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        </div>
+
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
