--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -56,7 +57,7 @@
           </li>
 
           <li>
-            <a class="breadcrumbs-hostels" href="#">Гостиницы</a>
+            <a class="breadcrumbs-link" href="#">Гостиницы</a>
           </li>
         </ul>
       </header>
