--- a/catalog.html
+++ b/catalog.html
@@ -249,7 +249,7 @@
           <a class="pagination-link" href="#">4</a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link">...</a>
+          <a class="pagination-link pagination-points">...</a>
         </li>
         <li class="pagination-item">
           <a class="pagination-link" href="#">10</a>
